projet_gl/src/test/deca/lexer/valid/comment.deca
// Description:
//    test lexer for comment.
//
// Resultats:
//    ok
//
// Historique:
//    cree le 10/01/2024

//this is a comment